--- a/pop_growth.Rmd
+++ b/pop_growth.Rmd
@@ -799,7 +799,8 @@ We have looked at:
   - Mathematical differences 
 
 - Many different population growth equations
-  - We have not talked about the model $N_{t+1} = \lambda N_t\left(1- \frac{N_t}{K} \right)$. I recommend reading about it
+  - We have not talked about the model $N_{t+1} = \lambda N_t\left(1- \frac{N_t}{K} \right)$.
+  I recommend reading about it
   - Concepts can be transferable but be aware while reading results may not be the same
   
 - This is just the beginning
@@ -815,4 +816,4 @@ class: inverse, middle, center
 
 <!-- <iframe src="https://quinnasena.shinyapps.io/r_logistic/" width="100%" height="1024px"></frame> -->
 
-<!-- pagedown::chrome_print("pop_growth.Rmd", "growth_app/www/pop_growth.pdf")
+<!-- pagedown::chrome_print("pop_growth.Rmd", "growth_app/www/pop_growth.pdf") -->
